[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "multidim"
authors = [
  {name = "Maciej Nasinski", email = "nasinski.maciej@gmail.com"},
  {name = "Pawel Strawinski", email = "pstrawinski@wne.uw.edu.pl"}
]
description = "Multidimensional Analysis Lecture"
readme = "README.md"
version = "0.1.0.9012"
requires-python = ">=3.8"
keywords = ["multidimensional", "analysis", "teaching"]
license = {text = "Apache License 2.0 | file LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "stata_setup",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "prince",
    "factor-analyzer",
    "matplotlib",
    "seaborn",
    "yellowbrick",
    "jupyter",
    "notebook",
    "importlib-resources",
    "importlib-metadata",
    "pywin32; platform_system=='Windows'",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "mypy", "nbmake"]
docs = [
  "Sphinx", 
  "myst-nb",
  "sphinx-autoapi", 
  "sphinx-rtd-theme"
]
build = ["build"]
benchmark = ["snakeviz"]
styler = ["flake8", "black"]
debug = ["ipdb"]
all = ["multidim[test,docs,build,benchmark,styler,debug]"]

[project.urls]
homepage = "https://github.com/Polkas/multidim"
documentation = "https://multidim.readthedocs.io/en/latest/"
repository = "https://github.com/Polkas/multidim"
changelog = "https://raw.githubusercontent.com/Polkas/multidim/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"multidim.data" = ["*"]
"multidim.notebooks" = ["*"]

[project.scripts]
copy-aw-notes = "multidim:copy"

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
ignore_missing_imports = true